<resources>
  <string name="app_name">Sip &amp; Score</string>

  <!--  Login-->
  <string name="login_failure">Login Failed</string>
  <string name="sign_out_text">Sign Out</string>

  <!--  Setting menu-->
  <string name="action_settings">Settings</string>
  <string name="settings">Settings</string>

  <!--  Titles-->
  <string name="title_drinks">Drinks</string>
  <string name="title_ratings">Ratings</string>
  <string name="title_bars">Bars</string>
  <string name="title_map">Map</string>
  <string name="title_activity_main">ScrollingActivity</string>
  <string name="title_activity_bar_map">Map</string>
  <string name="main_activity_snackbar">Replace with your own action</string>
  <string name="title_of_image_hint">Image Title / Drink Name</string>

  <!-- Strings used for fragments for navigation -->
  <string name="drink_fragment_label">Drinks</string>
  <string name="second_fragment_label">Second Fragment</string>

  <!--  Buttons-->
  <string name="add_drink">Add Drink</string>
  <string name="add_bar">Add Bar</string>
  <string name="find_bar">Find Bar</string>

  <string name="search_icon_description">Icon to start search with the text as it is currently</string>
  <string name="address_search_button">Search for current address</string>

  <!--  Hints-->
  <string name="bar_SearchBar_hint">Search My bars</string>
  <string name="comment_of_image_hint">Drink Comment</string>
  <string name="add_to_bar_hint">Add to Bar…</string>
  <string name="bar_name_hint">Bar Name</string>
  <string name="bar_comment_hint">Bar Comment</string>
  <string name="phone_number_hint">Phone Number</string>
  <string name="drink_card_label">Drink Rating Card</string>
  <string name="bar_card_label">Bar Rating Card</string>
  <string name="setting_label">Settings</string>
  <!-- Preference Titles -->
  <string name="messages_header">Messages</string>
  <string name="sync_header">Sync</string>

  <!-- Messages Preferences -->
  <string name="signature_title">Your signature</string>
  <string name="reply_title">Default reply action</string>

  <!-- Sync Preferences -->
  <string name="sync_title">Sync email periodically</string>
  <string name="attachment_title">Download incoming attachments</string>
  <string name="attachment_summary_on">Automatically download attachments for incoming emails
  </string>
  <string name="attachment_summary_off">Only download attachments when manually requested</string>
  <string name="pref_switch">switch</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>