<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/nav_graph"
  app:startDestination="@id/navigation_drinks">

  <fragment
    android:id="@+id/navigation_drinks"
    android:label="@string/title_drinks"
    android:name="edu.cnm.deepdive.sipandscore.controller.DrinkFragment"
    tools:layout="@layout/fragment_drink"/>

  <fragment
    android:id="@+id/navigation_bars"
    android:label="@string/title_bars"
    android:name="edu.cnm.deepdive.sipandscore.controller.BarListFragment"
    tools:layout="@layout/fragment_bar_list"/>

  <fragment
    android:id="@+id/navigation_map"
    android:label="@string/title_map"
    android:name="edu.cnm.deepdive.sipandscore.controller.BarMapFragment"
    tools:layout="@layout/activity_bar_map"/>

</navigation>