<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="8dp"
  tools:context=".controller.DrinkListFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RatingBar
      android:id="@+id/star_rating"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_static_spacing"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@id/bar_name_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:numStars="5"/>

    <ImageView
      android:id="@+id/image"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:scaleType="fitCenter"
      android:adjustViewBounds="true"
      app:layout_constraintTop_toBottomOf="@id/star_rating"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintWidth_percent=".6"
      android:layout_margin="@dimen/static_spacing"
      tools:ignore="ContentDescription"/>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/bar_name_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/static_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@id/comment_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/bar_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bar_name_hint"
        android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/comment_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/static_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/bar_name_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/comment_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bar_comment_hint"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="3"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/phone_number_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/static_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/comment_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/address_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/static_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/phone_number_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_address"
        android:inputType="textPostalAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

      <ImageButton
        android:id="@+id/search_bar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/static_spacing"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_search"
        app:layout_constraintTop_toTopOf="@id/phone_number_layout"
        app:layout_constraintBottom_toBottomOf="@id/phone_number_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/search_icon_description"/>

    <ImageButton
      android:id="@+id/find_address"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_margin="@dimen/static_spacing"
      android:scaleType="fitCenter"
      android:adjustViewBounds="true"
      android:src="@drawable/ic_search"
      app:layout_constraintTop_toTopOf="@id/address_layout"
      app:layout_constraintBottom_toBottomOf="@id/address_layout"
      app:layout_constraintEnd_toEndOf="parent"
      android:contentDescription="@string/address_search_button"/>


  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>