<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/static_spacing"
  android:orientation="vertical"
  tools:context=".controller.fragment.DrinkListFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RatingBar
      android:id="@+id/star_rating"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_static_spacing"
      app:layout_constraintTop_toBottomOf="@id/image"
      app:layout_constraintBottom_toTopOf="@id/title_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:numStars="5"/>

    <ImageView
      android:id="@+id/image"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:scaleType="fitCenter"
      android:adjustViewBounds="true"
      android:src="@drawable/ic_logo"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintWidth_percent=".6"
      android:layout_margin="@dimen/static_spacing"
      tools:ignore="ContentDescription"/>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/title_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/static_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/star_rating"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/image_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_of_image_hint"
        android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/comment_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/static_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/title_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/comment_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment_of_image_hint"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="3"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tag_bar_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/static_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/comment_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Add a bar..."
        android:inputType="text"/>

      <!--      <androidx.appcompat.widget.AppCompatAutoCompleteTextView-->
      <!--        android:id="@+id/tag_bar"-->
      <!--        android:layout_width="match_parent"-->
      <!--        android:layout_height="wrap_content"-->
      <!--        android:hint="@string/add_to_bar_hint"-->
      <!--        android:inputType="text"/>-->

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
      android:id="@+id/search_bar"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_margin="@dimen/static_spacing"
      android:scaleType="fitCenter"
      android:adjustViewBounds="true"
      android:src="@drawable/ic_search"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/tag_bar_layout"
      app:layout_constraintBottom_toBottomOf="@id/tag_bar_layout"
      android:contentDescription="@string/search_icon_description"/>

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>